<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">CafeDroid Remote</string>
    <string name="hello_user">Hello User!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_loading">Loading\nConnecting to Buddy.com</string>
    <string name="send">Send</string>
    <!--<string name="chat_with">Chat with _</string>-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="msg_choose">Choose message to send to CafeDroid</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="connection_lost">Connection lost. Reconnecting...</string>
    <string name="reconnected">Reconnected!</string>
</resources>
